--- a/Google kopija/googlemeklēšana.html
+++ b/Google kopija/googlemeklēšana.html
@@ -19,13 +19,13 @@
     <img class='searchbar-lupa' src='searchbar_lupa.png' href='#'>
 
     <button class='signin-poga' href='#' type='Sign in'>Sign in</button>
-    <img class='izvelne aplis' href='#' src='../Google_clone/menu.png' alt='izvelnes poga'>
+    <img class='izvelne aplis' href='#' src='../Google kopija//izvelnes_poga.png' alt='izvelnes poga'>
 
     <button class='viss pogas-spiedien' href='#' autofocus><img class='search_glass' src='search_glass.jpg'
             alt='lupa'>Viss</button>
     <button class='attēli pogas-spiedien' href='#'><img class='google-atteli' src='google_photos.png'
             alt='bildes'>Attēls</button>
-    <button class='maps pogas-spiedien' href='#'><img class='maps-logo' src='download23.png'
+    <button class='maps pogas-spiedien' href='#'><img class='maps-logo' src='maps_logo.png'
             alt='maps'>Maps</button>
     <button class='video pogas-spiedien' href='#'><img class='video-poga' src='Video_poga.png'
             alt='video'>Video</button>
